--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import "@fontsource/atkinson-hyperlegible";
 ---
 
 <!doctype html>
@@ -18,6 +19,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     <Footer />
     <style>
       body {
+        font-family: "Atkinson Hyperlegible", sans-serif;
         min-height: 100vh;
         display: flex;
         flex-direction: column;
