--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,19 +5,24 @@ import LogoSVG from "./LogoSVG.astro";
 
 <script>
   const COLOR_MODE_LS_KEY = "color-mode";
+  import { getInitialColorMode, setColorModeVariables } from "../scripts/utils";
 
   const check = document.getElementById(
     "light-dark-toggle"
   ) as HTMLInputElement;
-  const isChecked = window.localStorage.getItem(COLOR_MODE_LS_KEY);
+  const colorMode = getInitialColorMode();
 
-  if (isChecked === "dark") {
+  setColorModeVariables(colorMode);
+
+  if (colorMode === "dark") {
     check.checked = true;
   }
 
   check?.addEventListener("change", (e) => {
     const checked = (e.target as HTMLInputElement).checked;
-    localStorage.setItem(COLOR_MODE_LS_KEY, checked ? "dark" : "light");
+    const mode = checked ? "dark" : "light";
+    setColorModeVariables(mode);
+    localStorage.setItem(COLOR_MODE_LS_KEY, mode);
   });
 </script>
 <header>
