--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,30 +1,9 @@
 ---
 import HeaderLink from "./HeaderLink.astro";
 import LogoSVG from "./LogoSVG.astro";
+import ColorModeToggleButton from "./ColorModeToggleButton.astro";
 ---
 
-<script>
-  const COLOR_MODE_LS_KEY = "color-mode";
-  import { getInitialColorMode, setColorModeVariables } from "../scripts/utils";
-
-  const check = document.getElementById(
-    "light-dark-toggle"
-  ) as HTMLInputElement;
-  const colorMode = getInitialColorMode();
-
-  setColorModeVariables(colorMode);
-
-  if (colorMode === "dark") {
-    check.checked = true;
-  }
-
-  check?.addEventListener("change", (e) => {
-    const checked = (e.target as HTMLInputElement).checked;
-    const mode = checked ? "dark" : "light";
-    setColorModeVariables(mode);
-    localStorage.setItem(COLOR_MODE_LS_KEY, mode);
-  });
-</script>
 <header>
   <nav>
     <h2>
@@ -39,10 +18,7 @@ import LogoSVG from "./LogoSVG.astro";
       <HeaderLink href="/about">About</HeaderLink>
     </div>
     <div>
-      <label>
-        <input type="checkbox" id="light-dark-toggle" />
-         Dark mode
-      </label>
+      <ColorModeToggleButton />
     </div>
   </nav>
 </header>
