--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,8 +6,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import "@fontsource/atkinson-hyperlegible";
 ---
 
-<!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
     <link
@@ -19,6 +18,30 @@ import "@fontsource/atkinson-hyperlegible";
     />
   </head>
   <body>
+    <script is:inline>
+      function getInitialColorMode() {
+        const persistedColorPreference =
+          window.localStorage.getItem("color-mode");
+        const hasPersistedPreference =
+          typeof persistedColorPreference === "string";
+
+        if (hasPersistedPreference) {
+          return persistedColorPreference;
+        }
+
+        const mql = window.matchMedia("(prefers-color-scheme: dark)");
+        const hasMediaQueryPreference = typeof mql.matches === "boolean";
+        if (hasMediaQueryPreference) {
+          return mql.matches ? "dark" : "light";
+        }
+
+        return "light";
+      }
+
+      document
+        .querySelector("html")
+        .setAttribute("data-theme", getInitialColorMode());
+    </script>
     <Header title={SITE_TITLE} />
     <main>
       <slot />
