--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,6 +10,13 @@ import "@fontsource/atkinson-hyperlegible";
 <html lang="en">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <link
+      rel="preload"
+      href="/Atkinson-Hyperlegible-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
   </head>
   <body>
     <Header title={SITE_TITLE} />
@@ -19,7 +26,6 @@ import "@fontsource/atkinson-hyperlegible";
     <Footer />
     <style>
       body {
-        font-family: "Atkinson Hyperlegible", sans-serif;
         min-height: 100vh;
         display: flex;
         flex-direction: column;
