--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,14 @@
     0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
 }
 
+@font-face {
+  font-family: "Atkinson Hyperlegible";
+  src: url("/Atkinson-Hyperlegible-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -21,6 +29,7 @@ body {
   color: rgb(var(--gray-dark));
   font-size: 20px;
   line-height: 1.7;
+  font-family: "Atkinson Hyperlegible", sans-serif;
 }
 main {
   width: 720px;
