--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,9 +13,9 @@ import ColorModeToggleButton from "./ColorModeToggleButton.astro";
       </a>
     </h2>
     <div class="internal-links">
-      <HeaderLink href="/">Home</HeaderLink>
-      <HeaderLink href="/blog">Blog</HeaderLink>
-      <HeaderLink href="/about">About</HeaderLink>
+      <HeaderLink href="/">home</HeaderLink>
+      <HeaderLink href="/blog">blog</HeaderLink>
+      <HeaderLink href="/about">about</HeaderLink>
     </div>
     <div>
       <ColorModeToggleButton />
@@ -26,8 +26,6 @@ import ColorModeToggleButton from "./ColorModeToggleButton.astro";
   header {
     margin: 0;
     padding: 0 1em;
-    background: white;
-    box-shadow: 0 2px 8px rgba(var(--black), 5%);
   }
   h2 {
     margin: 0;
@@ -53,6 +51,6 @@ import ColorModeToggleButton from "./ColorModeToggleButton.astro";
   }
   nav a.active {
     text-decoration: none;
-    border-bottom-color: var(--accent);
+    border-bottom-color: var(--color-accent);
   }
 </style>
