--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,15 +1,3 @@
-:root {
-  --accent: #2337ff;
-  --accent-dark: #000d8a;
-  --black: 15, 18, 25;
-  --gray: 96, 115, 159;
-  --gray-light: 229, 233, 240;
-  --gray-dark: 34, 41, 57;
-  --gray-gradient: rgba(var(--gray-light), 50%), #fff;
-  --box-shadow: 0 2px 6px rgba(var(--gray), 25%),
-    0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
-}
-
 @font-face {
   font-family: "Atkinson Hyperlegible";
   src: url("/Atkinson-Hyperlegible-Regular.woff2") format("woff2");
@@ -17,14 +5,19 @@
   font-style: normal;
   font-display: swap;
 }
+
 [data-theme="light"] {
-  --color-text: lightgray;
+  --color-text: #000;
+  --color-background: #fff;
+  --color-accent: #525fe1;
   --toggle-transform: translateY(-50%);
   --toggle-background: #87cefa;
 }
 
 [data-theme="dark"] {
-  --color-text: blue;
+  --color-text: #fff;
+  --color-background: #000;
+  --color-accent: #525fe1;
   --toggle-transform: translateY(0%);
   --toggle-background: rgb(39, 83, 107);
 }
@@ -32,12 +25,12 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--color-background);
   text-align: left;
-  background: linear-gradient(var(--gray-gradient)) no-repeat;
   background-size: 100% 600px;
   word-wrap: break-word;
   overflow-wrap: break-word;
-  color: rgb(var(--gray-dark));
+  color: var(--color-text);
   font-size: 20px;
   line-height: 1.7;
   font-family: "Atkinson Hyperlegible", sans-serif;
@@ -79,11 +72,10 @@ b {
   font-weight: 700;
 }
 a {
-  color: var(--accent);
+  color: var(--color-text);
+  text-decoration-color: var(--color-accent);
 }
-a:hover {
-  color: var(--accent);
-}
+
 p {
   margin-bottom: 1em;
 }
@@ -107,7 +99,6 @@ img {
 }
 code {
   padding: 2px 5px;
-  background-color: rgb(var(--gray-light));
   border-radius: 2px;
 }
 pre {
@@ -118,14 +109,10 @@ pre > code {
   all: unset;
 }
 blockquote {
-  border-left: 4px solid var(--accent);
+  border-left: 4px solid var(--color-accent);
   padding: 0 0 0 20px;
   margin: 0px;
   font-size: 1.333em;
-}
-hr {
-  border: none;
-  border-top: 1px solid rgb(var(--gray-light));
 }
 @media (max-width: 720px) {
   body {
