Add transition to background color change

--- a/src/components/ColorModeToggleButton.astro
+++ b/src/components/ColorModeToggleButton.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<button class="btn-switch">
+<button class="btn-switch" aria-label="Toggle color mode" type="button">
   <div class="svg-wrapper">
     <svg
       xmlns="http://www.w3.org/2000/svg"
