--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,7 @@ body {
   font-size: 20px;
   line-height: 1.7;
   font-family: "Atkinson Hyperlegible", sans-serif;
+  transition: background 0.4s;
 }
 main {
   width: 720px;
