--- a/src/components/ColorModeToggleButton.astro
+++ b/src/components/ColorModeToggleButton.astro
@@ -249,7 +249,7 @@
     width: 40px;
     overflow: hidden;
     background-color: var(--toggle-background);
-    transition: 0.7s ease-out;
+    transition: 0.6s ease-in-out;
   }
 
   .svg-wrapper {
