--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,143 +1,11 @@
+@import url(reset.css) layer(reset);
+@import url(variables.css) layer(variables);
+@import url(base.css) layer(base);
+
 @font-face {
   font-family: "Atkinson Hyperlegible";
   src: url("/Atkinson-Hyperlegible-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-}
-
-[data-theme="light"] {
-  --color-text: #000;
-  --color-background: #fff;
-  --color-accent: #525fe1;
-  --toggle-transform: translateY(-50%);
-  --toggle-background: #87cefa;
-}
-
-[data-theme="dark"] {
-  --color-text: #fff;
-  --color-background: #000;
-  --color-accent: #525fe1;
-  --toggle-transform: translateY(0%);
-  --toggle-background: rgb(39, 83, 107);
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  background-color: var(--color-background);
-  text-align: left;
-  background-size: 100% 600px;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  color: var(--color-text);
-  font-size: 20px;
-  line-height: 1.7;
-  font-family: "Atkinson Hyperlegible", sans-serif;
-  transition: background 0.4s;
-}
-main {
-  width: 720px;
-  max-width: calc(100% - 2em);
-  margin: auto;
-  padding: 3em 1em;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0 0 0.5rem 0;
-  color: var(--color-text);
-  line-height: 1.2;
-  text-transform: lowercase;
-}
-h1 {
-  font-size: 3.052em;
-}
-h2 {
-  font-size: 2.441em;
-}
-h3 {
-  font-size: 1.953em;
-}
-h4 {
-  font-size: 1.563em;
-}
-h5 {
-  font-size: 1.25em;
-}
-strong,
-b {
-  font-weight: 700;
-}
-a {
-  color: var(--color-text);
-  text-decoration: underline var(--color-accent);
-}
-
-p {
-  margin-bottom: 1em;
-}
-.prose p {
-  margin-bottom: 2em;
-}
-textarea {
-  width: 100%;
-  font-size: 16px;
-}
-input {
-  font-size: 16px;
-}
-table {
-  width: 100%;
-}
-img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px;
-}
-code {
-  padding: 2px 5px;
-  border-radius: 2px;
-}
-pre {
-  padding: 1.5em;
-  border-radius: 8px;
-}
-pre > code {
-  all: unset;
-}
-blockquote {
-  border-left: 4px solid var(--color-accent);
-  padding: 0 0 0 20px;
-  margin: 0px;
-  font-size: 1.333em;
-}
-@media (max-width: 720px) {
-  body {
-    font-size: 18px;
-  }
-  main {
-    padding: 1em;
-  }
-}
-
-.sr-only {
-  border: 0;
-  padding: 0;
-  margin: 0;
-  position: absolute !important;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-  clip: rect(1px 1px 1px 1px);
-  /* maybe deprecated but we need to support legacy browsers */
-  clip: rect(1px, 1px, 1px, 1px);
-  /* modern browsers, clip-path works inwards from each corner */
-  clip-path: inset(50%);
-  /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
-  white-space: nowrap;
 }
