--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,48 +5,83 @@ import ColorModeToggleButton from "./ColorModeToggleButton.astro";
 ---
 
 <header>
-  <nav>
+  <div>
     <h2>
       <a href="/">
         <span class="sr-only">Go to homepage</span>
         <LogoSVG class="nav-logo" width="70px" />
       </a>
     </h2>
-    <div class="internal-links">
+    <nav>
       <HeaderLink href="/">home</HeaderLink>
       <HeaderLink href="/blog">blog</HeaderLink>
       <HeaderLink href="/about">about</HeaderLink>
-    </div>
-    <div>
-      <ColorModeToggleButton />
-    </div>
-  </nav>
+    </nav>
+  </div>
+  <div>
+    <ColorModeToggleButton />
+  </div>
 </header>
 <style>
-  h2 {
-    margin: 0;
-    font-size: 1em;
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-inline: 1em;
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
   }
-
-  h2 a,
-  h2 a.active {
-    text-decoration: none;
-    padding: 1em 0.5em;
+  header > div {
     display: flex;
   }
+  h2 {
+    display: none;
+  }
+
   nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 1rem;
   }
   nav a {
-    padding: 1em 0.5em;
+    /* padding: 1em 0.5em; */
     color: var(--black);
-    border-bottom: 4px solid transparent;
     text-decoration: none;
+    font-size: 1.4rem;
   }
   nav a.active {
     text-decoration: none;
-    border-bottom-color: var(--color-accent);
+    font-weight: normal;
+    position: relative;
+    /* font-weight: bold; */
+  }
+
+  nav a.active::before {
+    content: "";
+    background-color: var(--color-highlight);
+    position: absolute;
+    left: 0.5rem;
+    bottom: 5px;
+    width: 100%;
+    height: 8px;
+    z-index: -1;
+    transition: all 0.3s ease-in-out;
+  }
+
+  @media screen and (min-width: 768px) {
+    h2 {
+      display: block;
+      margin: 0;
+      margin-right: 2rem;
+      font-size: 1em;
+    }
+    h2 a,
+    h2 a.active {
+      text-decoration: none;
+      padding: 1em 0.5em;
+      display: flex;
+    }
   }
 </style>
