--- a/src/components/ColorModeToggleButton.astro
+++ b/src/components/ColorModeToggleButton.astro
@@ -11,203 +11,22 @@
       viewBox="0 0 256 256"
       xml:space="preserve"
     >
-      <defs></defs>
+      <defs> </defs>
       <g
-        style="
-          stroke: none;
-          stroke-width: 0;
-          stroke-dasharray: none;
-          stroke-linecap: butt;
-          stroke-linejoin: miter;
-          stroke-miterlimit: 10;
-          fill: none;
-          fill-rule: nonzero;
-          opacity: 1;
-        "
+        style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: #fff; fill-rule: nonzero; opacity: 1;"
         transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
       >
-        <circle
-          cx="45"
-          cy="45"
-          r="45"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: transparent;
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
         <path
-          d="M 38.81 51.19 c -9.155 -9.155 -10.308 -23.282 -3.46 -33.69 c -3.454 1.393 -6.692 3.488 -9.492 6.288 c -11.144 11.144 -11.144 29.211 0 40.354 s 29.211 11.144 40.354 0 c 2.8 -2.8 4.895 -6.037 6.288 -9.492 C 62.092 61.499 47.965 60.346 38.81 51.19 z"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(252, 213, 126);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
+          d="M 89.634 59.683 c -0.338 -0.276 -0.816 -0.302 -1.184 -0.062 c -16.514 10.864 -38.661 8.589 -52.661 -5.41 C 21.79 40.212 19.515 18.065 30.38 1.551 c 0.24 -0.366 0.215 -0.845 -0.062 -1.183 c -0.277 -0.339 -0.741 -0.46 -1.148 -0.294 c -5.826 2.349 -11.048 5.809 -15.523 10.283 c -18.195 18.195 -18.195 47.802 0 65.997 C 22.744 85.451 34.695 90 46.645 90 c 11.951 0 23.901 -4.549 32.999 -13.646 c 4.475 -4.476 7.935 -9.699 10.284 -15.523 C 90.091 60.425 89.972 59.96 89.634 59.683 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: #fff; fill-rule: nonzero; opacity: 1;"
           transform=" matrix(1 0 0 1 0 0) "
           stroke-linecap="round"></path>
-        <path
-          d="M 55.218 41.106 c -1.083 -3.251 -3.654 -5.822 -6.905 -6.906 c -0.542 -0.181 -0.542 -0.934 0 -1.115 c 3.251 -1.083 5.822 -3.654 6.905 -6.905 c 0.181 -0.542 0.934 -0.542 1.115 0 c 1.083 3.251 3.654 5.822 6.906 6.905 c 0.542 0.18 0.542 0.934 0 1.115 c -3.251 1.083 -5.822 3.655 -6.906 6.906 C 56.153 41.648 55.399 41.648 55.218 41.106 z"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform=" matrix(1 0 0 1 0 0) "
-          stroke-linecap="round"></path>
-        <circle
-          cx="78.165"
-          cy="41.515"
-          r="1.165"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
-        <circle
-          cx="39.665"
-          cy="82.305"
-          r="1.165"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
-        <circle
-          cx="45.005"
-          cy="12.645"
-          r="1.165"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
-        <circle
-          cx="56.945"
-          cy="51.095"
-          r="1.165"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
-        <circle
-          cx="9.094999999999999"
-          cy="33.644999999999996"
-          r="1.165"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
-        <circle
-          cx="70.235"
-          cy="76.20500000000001"
-          r="1.165"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
-        <circle
-          cx="69.075"
-          cy="14.975000000000001"
-          r="1.165"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
-        <circle
-          cx="16.335"
-          cy="59.885"
-          r="1.165"
-          style="
-            stroke: none;
-            stroke-width: 1;
-            stroke-dasharray: none;
-            stroke-linecap: butt;
-            stroke-linejoin: miter;
-            stroke-miterlimit: 10;
-            fill: rgb(234, 239, 244);
-            fill-rule: nonzero;
-            opacity: 1;
-          "
-          transform="  matrix(1 0 0 1 0 0) "></circle>
       </g>
     </svg>
     <svg
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
       version="1.1"
-      height="34"
-      width="34"
       viewBox="0 0 256 256"
       xml:space="preserve"
     >
@@ -217,23 +36,48 @@
         transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
       >
         <path
-          d="M 33.401 89.585 c -0.4 0 -0.803 -0.057 -1.196 -0.172 c -1.325 -0.389 -2.382 -1.401 -2.829 -2.708 l -3.114 -9.121 c -0.34 -0.997 -1.315 -1.628 -2.359 -1.516 l -9.59 0.956 c -1.372 0.131 -2.733 -0.403 -3.637 -1.447 C 9.77 74.534 9.428 73.11 9.759 71.77 l 2.311 -9.357 c 0.252 -1.022 -0.227 -2.071 -1.165 -2.55 l -8.585 -4.381 c -1.23 -0.628 -2.082 -1.818 -2.278 -3.185 c -0.197 -1.367 0.285 -2.749 1.288 -3.698 l 7.003 -6.621 c 0.765 -0.724 0.929 -1.865 0.399 -2.775 L 3.88 30.877 c -0.696 -1.192 -0.768 -2.655 -0.194 -3.911 c 0.573 -1.256 1.726 -2.159 3.083 -2.414 l 9.471 -1.785 c 1.035 -0.195 1.79 -1.066 1.836 -2.119 l 0.418 -9.629 c 0.06 -1.379 0.789 -2.649 1.951 -3.395 c 1.161 -0.747 2.62 -0.882 3.899 -0.364 l 8.932 3.619 c 0.977 0.396 2.083 0.071 2.69 -0.79 l 5.558 -7.874 c 0.796 -1.128 2.095 -1.801 3.476 -1.801 c 0 0 0 0 0.001 0 c 1.381 0 2.681 0.673 3.477 1.801 l 0.001 0 l 5.558 7.874 c 0.606 0.86 1.714 1.188 2.689 0.79 l 8.933 -3.619 c 1.279 -0.519 2.737 -0.383 3.898 0.364 c 1.162 0.747 1.892 2.016 1.951 3.396 l 0.419 9.629 c 0.046 1.052 0.801 1.924 1.836 2.119 l 9.471 1.785 c 1.356 0.255 2.509 1.158 3.083 2.414 c 0.573 1.256 0.501 2.718 -0.194 3.911 l -4.854 8.326 c -0.53 0.91 -0.366 2.052 0.398 2.775 l 7.003 6.621 c 1.003 0.949 1.485 2.331 1.288 3.698 c -0.196 1.366 -1.048 2.557 -2.278 3.185 l -8.584 4.381 c -0.938 0.479 -1.417 1.527 -1.165 2.551 l 2.312 9.355 c 0.331 1.342 -0.012 2.766 -0.916 3.809 c -0.904 1.044 -2.262 1.581 -3.638 1.447 l -9.59 -0.956 c -1.046 -0.11 -2.017 0.52 -2.358 1.516 l -3.114 9.121 c -0.446 1.307 -1.504 2.319 -2.829 2.708 c -1.324 0.388 -2.762 0.107 -3.843 -0.75 l -7.55 -5.988 c -0.826 -0.654 -1.979 -0.654 -2.804 0 l -7.551 5.988 C 35.287 89.267 34.35 89.585 33.401 89.585 z"
-          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,169,65); fill-rule: nonzero; opacity: 1;"
+          d="M 45 68 c -12.682 0 -23 -10.317 -23 -23 c 0 -12.682 10.318 -23 23 -23 c 12.683 0 23 10.318 23 23 C 68 57.683 57.683 68 45 68 z M 45 28 c -9.374 0 -17 7.626 -17 17 s 7.626 17 17 17 s 17 -7.626 17 -17 S 54.374 28 45 28 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
           transform=" matrix(1 0 0 1 0 0) "
           stroke-linecap="round"></path>
         <path
-          d="M 45 71.001 c -14.337 0 -26 -11.663 -26 -26 c 0 -14.337 11.664 -26 26 -26 c 14.337 0 26 11.664 26 26 C 71 59.338 59.337 71.001 45 71.001 z"
-          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,222,85); fill-rule: nonzero; opacity: 1;"
+          d="M 45 17.556 c -1.657 0 -3 -1.343 -3 -3 V 3 c 0 -1.657 1.343 -3 3 -3 c 1.657 0 3 1.343 3 3 v 11.556 C 48 16.212 46.657 17.556 45 17.556 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
           transform=" matrix(1 0 0 1 0 0) "
           stroke-linecap="round"></path>
         <path
-          d="M 27.5 46.001 c -0.552 0 -1 -0.448 -1 -1 c 0 -10.201 8.299 -18.5 18.5 -18.5 c 0.552 0 1 0.448 1 1 c 0 0.552 -0.448 1 -1 1 c -9.098 0 -16.5 7.402 -16.5 16.5 C 28.5 45.553 28.052 46.001 27.5 46.001 z"
-          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,169,65); fill-rule: nonzero; opacity: 1;"
+          d="M 45 90 c -1.657 0 -3 -1.343 -3 -3 V 75.444 c 0 -1.657 1.343 -3 3 -3 c 1.657 0 3 1.343 3 3 V 87 C 48 88.657 46.657 90 45 90 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
           transform=" matrix(1 0 0 1 0 0) "
           stroke-linecap="round"></path>
         <path
-          d="M 52.757 61.692 c -0.368 0 -0.723 -0.204 -0.897 -0.557 c -0.245 -0.495 -0.042 -1.095 0.453 -1.34 c 3.074 -1.522 5.565 -3.922 7.202 -6.941 c 0.263 -0.485 0.87 -0.665 1.355 -0.402 c 0.485 0.264 0.666 0.87 0.402 1.355 c -1.835 3.384 -4.627 6.074 -8.073 7.78 C 53.057 61.659 52.905 61.692 52.757 61.692 z"
-          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,169,65); fill-rule: nonzero; opacity: 1;"
+          d="M 14.556 48 H 3 c -1.657 0 -3 -1.343 -3 -3 c 0 -1.657 1.343 -3 3 -3 h 11.556 c 1.657 0 3 1.343 3 3 C 17.556 46.657 16.212 48 14.556 48 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
+          transform=" matrix(1 0 0 1 0 0) "
+          stroke-linecap="round"></path>
+        <path
+          d="M 87 48 H 75.444 c -1.657 0 -3 -1.343 -3 -3 c 0 -1.657 1.343 -3 3 -3 H 87 c 1.657 0 3 1.343 3 3 C 90 46.657 88.657 48 87 48 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
+          transform=" matrix(1 0 0 1 0 0) "
+          stroke-linecap="round"></path>
+        <path
+          d="M 66.527 26.473 c -0.768 0 -1.535 -0.293 -2.121 -0.878 c -1.172 -1.172 -1.172 -3.071 0 -4.243 l 8.171 -8.171 c 1.172 -1.172 3.07 -1.171 4.242 0 c 1.172 1.172 1.172 3.071 0 4.243 l -8.171 8.171 C 68.063 26.18 67.295 26.473 66.527 26.473 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
+          transform=" matrix(1 0 0 1 0 0) "
+          stroke-linecap="round"></path>
+        <path
+          d="M 15.302 77.698 c -0.768 0 -1.536 -0.293 -2.121 -0.879 c -1.172 -1.171 -1.172 -3.071 0 -4.242 l 8.171 -8.171 c 1.171 -1.172 3.071 -1.172 4.242 0 c 1.172 1.171 1.172 3.071 0 4.242 l -8.171 8.171 C 16.837 77.405 16.069 77.698 15.302 77.698 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
+          transform=" matrix(1 0 0 1 0 0) "
+          stroke-linecap="round"></path>
+        <path
+          d="M 23.473 26.473 c -0.768 0 -1.536 -0.293 -2.121 -0.878 l -8.171 -8.171 c -1.172 -1.172 -1.172 -3.071 0 -4.243 c 1.172 -1.172 3.072 -1.171 4.243 0 l 8.171 8.171 c 1.172 1.172 1.172 3.071 0 4.243 C 25.008 26.18 24.24 26.473 23.473 26.473 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
+          transform=" matrix(1 0 0 1 0 0) "
+          stroke-linecap="round"></path>
+        <path
+          d="M 74.698 77.698 c -0.768 0 -1.535 -0.293 -2.121 -0.879 l -8.171 -8.171 c -1.172 -1.171 -1.172 -3.071 0 -4.242 c 1.172 -1.172 3.07 -1.172 4.242 0 l 8.171 8.171 c 1.172 1.171 1.172 3.071 0 4.242 C 76.233 77.405 75.466 77.698 74.698 77.698 z"
+          style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"
           transform=" matrix(1 0 0 1 0 0) "
           stroke-linecap="round"></path>
       </g>
@@ -250,6 +94,7 @@
     overflow: hidden;
     background-color: var(--toggle-background);
     transition: 0.6s ease-in-out;
+    padding: 6px;
   }
 
   .svg-wrapper {
