--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,17 +3,18 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <h1>🧑‍🚀 Hello, Astronaut!</h1>
+  <h1>Hi, I'm Nikola Margit</h1>
   <p>
-    Welcome to the official <a href="https://astro.build/">Astro</a> blog
-    starter template. This template serves as a lightweight, minimally-styled
-    starting point for anyone looking to build a personal website, blog, or
-    portfolio with Astro.
-  </p>
-  <p>
-    This template comes with a few integrations already configured in your
-    <code>astro.config.mjs</code> file. You can customize your setup with
-    <a href="https://astro.build/integrations">Astro Integrations</a> to add
-    tools like Tailwind, React, or Vue to your project.
+    I'm a web developer based in Belgrade, Serbia. Currently, I contribute as a
+    React developer at CAKE.com, where my focus lies in creating seamless and
+    visually refined user interfaces using React and TypeScript. I am
+    particularly dedicated to the principles of accessibility, ensuring that the
+    digital solutions I craft are inclusive and user-friendly.
+  </p><p>
+    My blog serves as a learning diary, capturing my continuous exploration of
+    new concepts and technologies. It's a space where I document the challenges
+    and insights encountered on my journey through the ever-evolving landscape
+    of web development. Join me as I delve into the intricacies of this dynamic
+    field, one blog post at a time.
   </p>
 </BaseLayout>
