--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,6 +16,12 @@ import "@fontsource/atkinson-hyperlegible";
       type="font/woff2"
       crossorigin
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,700;1,400&family=Bungee+Shade&family=Poppins:wght@400;700&family=Signika+Negative:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script is:inline>
