--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,13 +1,20 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: var(--color-background);
+  background: #333;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background: linear-gradient(
+    158deg,
+    rgba(255, 255, 93, 1) 1%,
+    rgba(209, 130, 238, 1) 100%
+  );
+
   text-align: left;
-  background-size: 100% 600px;
   color: var(--color-text);
-  font-size: 20px;
+  font-size: 22px;
   font-family: "Atkinson Hyperlegible", sans-serif;
-  transition: background 0.4s;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -15,7 +22,7 @@ body {
 main {
   padding: 3em 1em;
   flex: 1;
-  max-width: 900px;
+  max-width: var(--max-width);
   margin: auto;
 }
 h1,
@@ -27,7 +34,8 @@ h6 {
   margin: 0 0 0.5rem 0;
   color: var(--color-text);
   line-height: 1.2;
-  text-transform: lowercase;
+  font-weight: 700;
+  font-family: "Signika Negative", sans-serif;
 }
 h1 {
   font-size: 3.052em;
@@ -50,7 +58,7 @@ b {
 }
 a {
   color: var(--color-text);
-  text-decoration: underline var(--color-accent);
+  text-decoration: underline;
 }
 
 p {
@@ -86,7 +94,7 @@ pre > code {
   all: unset;
 }
 blockquote {
-  border-left: 4px solid var(--color-accent);
+  border-left: 4px solid black;
   padding: 0 0 0 20px;
   margin: 0px;
   font-size: 1.333em;
