--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,17 +9,10 @@ import "@fontsource/atkinson-hyperlegible";
 <html lang="en" data-theme="light">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    <link
-      rel="preload"
-      href="/Atkinson-Hyperlegible-Regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,700;1,400&family=Bungee+Shade&family=Poppins:wght@400;700&family=Signika+Negative:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
   </head>
