--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,11 +5,8 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  background: linear-gradient(
-    158deg,
-    rgba(255, 255, 93, 1) 1%,
-    rgba(209, 130, 238, 1) 100%
-  );
+  background: #a1ffce;
+  background: linear-gradient(to right, #faffd1, #a1ffce);
 
   text-align: left;
   color: var(--color-text);
@@ -35,10 +32,9 @@ h6 {
   color: var(--color-text);
   line-height: 1.2;
   font-weight: 700;
-  font-family: "Signika Negative", sans-serif;
 }
 h1 {
-  font-size: 3.052em;
+  font-size: 2.752em;
 }
 h2 {
   font-size: 2.441em;
@@ -58,7 +54,7 @@ b {
 }
 a {
   color: var(--color-text);
-  text-decoration: underline;
+  text-decoration: underline #ffa1d2;
 }
 
 p {
