--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,17 +3,26 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <h1>👋 I'm Nikola Margit</h1>
-  <p>
-    I'm a web developer based in Belgrade, Serbia. Currently, I contribute as a
-    React developer at <a href="https://cake.com/">CAKE.com</a>, where my focus
-    lies in creating visually appealing, interactive, and engaging user
-    interfaces. I am dedicated to the principles of accessibility, ensuring that
-    the things I craft are inclusive and user-friendly.
-  </p><p>
-    My blog serves as a learning diary in my continuous exploration of new
-    concepts and technologies. It's a space where I document the challenges and
-    insights encountered on my journey through the ever-evolving landscape of
-    web development.
-  </p>
+  <div>
+    <h1>👋 I'm Nikola Margit</h1>
+    <p>
+      I'm a web developer based in Belgrade, Serbia. Currently, I contribute as
+      a React developer at <a href="https://cake.com/">CAKE.com</a>, where my
+      focus lies in creating visually appealing, interactive, and engaging user
+      interfaces. I am dedicated to the principles of accessibility, ensuring
+      that the things I craft are inclusive and user-friendly.
+    </p><p>
+      My blog serves as a learning diary in my continuous exploration of new
+      concepts and technologies. It's a space where I document the challenges
+      and insights encountered on my journey through the ever-evolving landscape
+      of web development.
+    </p>
+  </div>
 </BaseLayout>
+<style>
+  div {
+    background: rgba(255, 255, 255, 0.6);
+    padding: 1rem;
+    border-radius: 0.5rem;
+  }
+</style>
