Move accent collor to variables layer

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -24,8 +24,8 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, "");
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    background: #ffa1d2;
-    box-shadow: 5px 5px 0px 1px rgba(255, 161, 210, 0.4);
+    background: var(--color-accent);
+    box-shadow: 5px 5px 0px 1px var(--color-accent-shadow);
     width: 6rem;
   }
   a {
