Create reusable Card component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
+import Card from "../components/Card.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <div>
+  <Card>
     <h1>👋 I'm Nikola Margit</h1>
     <p>
       I'm a web developer based in Belgrade, Serbia. Currently, I contribute as
@@ -17,12 +18,5 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       and insights encountered on my journey through the ever-evolving landscape
       of web development.
     </p>
-  </div>
+  </Card>
 </BaseLayout>
-<style>
-  div {
-    background: rgba(255, 255, 255, 0.6);
-    padding: 1rem;
-    border-radius: 0.5rem;
-  }
-</style>
