--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,6 +2,7 @@
 import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import Card from "../../components/Card.astro";
 
 const posts = (await getCollection("blog")).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
@@ -14,16 +15,30 @@ const posts = (await getCollection("blog")).sort(
       {
         posts.map((post) => (
           <li>
-            <a href={`/blog/${post.slug}/`}>
-              <img width={720} height={360} src={post.data.heroImage} alt="" />
-              <h4 class="title">{post.data.title}</h4>
-              <p class="date">
-                <FormattedDate date={post.data.pubDate} />
-              </p>
-            </a>
+            <Card>
+              <div>
+                <a href={`/blog/${post.slug}/`}>
+                  <h4 class="title">{post.data.title}</h4>
+                </a>
+                <p class="date">
+                  <FormattedDate date={post.data.pubDate} />
+                </p>
+                <p>{post.data.description}</p>
+              </div>
+            </Card>
           </li>
         ))
       }
     </ul>
   </section>
 </BaseLayout>
+<style>
+  ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.4rem;
+  }
+  div {
+    height: 250px;
+  }
+</style>
