Implement upated header styles

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,8 +7,9 @@
 </div>
 <style>
   div {
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(251, 244, 235, 0.7);
     padding: 1.2rem;
     border-radius: 0.5rem;
+    border: 2px solid var(--color-accent);
   }
 </style>
