--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,9 +7,10 @@
 </div>
 <style>
   div {
-    background: rgba(251, 244, 235, 0.7);
+    background: var(--color-primary);
+    background-image: url(/grain.png);
     padding: 1.2rem;
     border-radius: 0.5rem;
-    border: 2px solid var(--color-accent);
+    border: 2px solid var(--color-text);
   }
 </style>
