--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -41,4 +41,8 @@ const posts = (await getCollection("blog")).sort(
   div {
     height: 250px;
   }
+  h4,
+  p {
+    color: var(--black);
+  }
 </style>
