Add custom scroll

--- a/src/components/LogoSVG.astro
+++ b/src/components/LogoSVG.astro
@@ -23,7 +23,7 @@ const { size = "60px" } = Astro.props;
   svg {
     width: var(--size);
     height: var(--size);
-    stroke: var(--color-text);
-    fill: var(--color-text);
+    stroke: var(--color-primary);
+    fill: var(--color-primary);
   }
 </style>
