--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,10 +7,16 @@
 </div>
 <style>
   div {
-    background: var(--color-primary);
     background-image: url(/grain.png);
     padding: 1.2rem;
     border-radius: 0.5rem;
     border: 2px solid var(--color-text);
+    box-shadow:
+      rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+      rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  }
+  div:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+    transition: background-color 300ms linear;
   }
 </style>
