Fix dash break path

--- a/src/components/DashBreak.astro
+++ b/src/components/DashBreak.astro
@@ -7,8 +7,8 @@
   div {
     width: 100%;
     background-color: var(--color-text);
-    -webkit-mask-image: url(dash.svg);
-    mask-image: url(dash.svg);
+    -webkit-mask-image: url(/dash.svg);
+    mask-image: url(/dash.svg);
     height: 2px;
   }
 </style>
