--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,7 +5,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import Card from "../../components/Card.astro";
 
 const posts = (await getCollection("blog")).sort(
-  (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
 
@@ -37,6 +37,9 @@ const posts = (await getCollection("blog")).sort(
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
+  }
+  ul li::before {
+    content: "";
   }
   div {
     height: 250px;
