--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -46,7 +46,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 0.5rem 0;
+  margin: 1.4rem 0;
   color: var(--color-text);
   line-height: 1.2;
   font-weight: 700;
@@ -79,12 +79,11 @@ a:hover {
   text-decoration: underline var(--color-primary);
 }
 
-p {
-  margin-bottom: 1em;
+p,
+.astro-code {
+  margin-bottom: 0.8rem;
 }
-.prose p {
-  margin-bottom: 2em;
-}
+
 textarea {
   width: 100%;
   font-size: 16px;
@@ -103,6 +102,7 @@ img {
 code {
   padding: 2px 5px;
   border-radius: 2px;
+  background: var(--color-code);
 }
 pre {
   padding: 1.5em;
@@ -112,11 +112,21 @@ pre > code {
   all: unset;
 }
 blockquote {
-  border-left: 4px solid black;
+  border-left: 4px solid var(--color-text);
   padding: 0 0 0 20px;
   margin: 0px;
   font-size: 1.333em;
 }
+
+ul li::before {
+  content: "\2022";
+  color: var(--color-primary);
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
 @media (max-width: 720px) {
   body {
     font-size: 18px;
