--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout>
+<BaseLayout title="About me">
   <h1>About me</h1>
   <p>
     Greetings! I'm Nikola Margit, web developer & constant learner. My
