--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -11,12 +11,12 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 <BaseLayout title={title} descripion={description}>
   <article>
     <div>
-      <div class="title">
-        <div class="date">
+      <div>
+        <div>
           <FormattedDate date={pubDate} />
           {
             updatedDate && (
-              <div class="last-updated-on">
+              <div>
                 Last updated on <FormattedDate date={updatedDate} />
               </div>
             )
@@ -31,5 +31,6 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 <style>
   article {
     padding-bottom: 1.2rem;
+    width: 100%;
   }
 </style>
