--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,19 +44,21 @@ import LogoSVG from "./LogoSVG.astro";
     justify-content: center;
     gap: 2rem;
   }
+
   h2 {
-    display: none;
     margin: 0;
   }
   h2 a {
     color: var(--color-text);
   }
 
-  @media screen and (min-width: 768px) {
-    h2 a,
-    h2 a.active {
-      text-decoration: none;
-      display: flex;
+  @media screen and (max-width: 768px) {
+    .nav-wrapper {
+      flex: 1;
+      justify-content: space-between;
+    }
+    h2 {
+      display: none;
     }
   }
 </style>
